# shrcer

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
examples/: generate_configs.sh
src/: config.rs  generator.rs  main.rs
