[package]
name = "shrcer"
version = "0.1.0"
edition = "2021"
description = "A tool to generate .zshrc/.fishrc files from TOML configuration"
authors = ["shrcer"]

[dependencies]
toml = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
